<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<!-- Options Menu for SearchableActivity and WordActivity.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/search"
          android:title="@string/menu_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/sections"
         android:title="@string/Sections" 
         android:showAsAction="never" 
         android:actionLayout="@layout/sections"></item>
    
    <item android:id="@+id/floorplan" android:title="@string/Floorplan" android:actionLayout="@layout/maps" android:showAsAction="never"></item><item android:id="@+id/employee" 
          android:title="@string/Employee" 
          android:showAsAction="never" android:actionLayout="@layout/employee"/>
    
    <item android:id="@+id/web"
        android:title="@string/Web" 
        android:showAsAction="never" 
        android:actionLayout="@layout/web"/>
        
   <item android:id="@+id/help" 
         android:title="@string/Help" 
         android:showAsAction="never" android:actionLayout="@layout/helpmain"/>
   
   <item android:id="@+id/about"
         android:title="@string/About"
         android:showAsAction="never" android:actionLayout="@layout/about"/>
   
   
   
    
    
    
</menu>