<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scaleType="fitXY"
   		android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/faculty"
            android:textAppearance="?android:attr/textAppearanceLarge"
           
           />

        <TextView
            android:id="@+id/Space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:text="@string/emp_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageViewEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
        	android:layout_gravity="center_horizontal"
            android:contentDescription="@string/propic" 
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/position"
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/email"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/intercom"
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
      
    </LinearLayout>

</ScrollView>
